--- a/CustomerApp/app/src/main/res/values/styles.xml
+++ b/CustomerApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BestelApp" parent="Theme.AppCompat" >
+        <item name="android:colorBackground">#001734</item>
+        <item name="colorAccent">#FF9600</item>
+        <item name="colorPrimary">#FF9600</item>
+    </style>
+
 </resources>
