--- a/CustomerApp/app/src/main/res/values/colors.xml
+++ b/CustomerApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="NavigationBarDark">#1c1c1c</color>
 </resources>
