--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -7,30 +7,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:background=""
     tools:context="com.periode4groep2.customerapp.PresentationLayer.HomeScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="test 1"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="test 2"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="test 3"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="test 4"/>
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test 1" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test 2" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test 3" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test 4" />
 
     </LinearLayout>
 </LinearLayout>
