--- a/CustomerApp/app/src/main/res/values-v21/styles.xml
+++ b/CustomerApp/app/src/main/res/values-v21/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:colorBackground">#001734</item>
         <item name="colorAccent">#FF9600</item>
         <item name="android:navigationBarColor">@android:color/black</item>
-        <item name="android:statusBarColor">#FF9600</item>
+        <item name="android:statusBarColor">#d87f00</item>
         <item name="colorPrimary">#FF9600</item>
     </style>
 </resources>
