--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,15 @@
     tools:context="com.periode4groep2.customerapp.MainActivity"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="#FF9600"
+        android:elevation="4dp"
+        android:theme="@style/BestelAppv2"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,6 +48,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:hint="example123@mail.com"
             />
         <TextView
@@ -51,19 +62,27 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:hint="**********"/>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
-        <EditText
+        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="test123"/>
-    </LinearLayout>
+            android:text="Inloggen"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorOrange"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:textSize="18dp"/>
+    </RelativeLayout>
 </LinearLayout>
 
 
