--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_weight="1"
         android:orientation="vertical">
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Bestelapp"
@@ -39,6 +39,7 @@
         android:layout_weight="1"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/emailId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="E-mail:"
@@ -46,6 +47,7 @@
             android:paddingLeft="5dp"
             android:textColor="@android:color/white"/>
         <EditText
+            android:id="@+id/emailInputId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
@@ -53,6 +55,7 @@
             android:hint="example123@mail.com"
             />
         <TextView
+            android:id="@+id/passwordId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wachtwoord:"
@@ -60,6 +63,7 @@
             android:paddingLeft="5dp"
             android:textColor="@android:color/white"/>
         <EditText
+            android:id="@+id/passwordInputId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
@@ -73,6 +77,7 @@
         android:layout_weight="1"
         android:orientation="vertical">
         <Button
+            android:id="@+id/inlogKnopId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Inloggen"
