--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -6,7 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorOrange"
     android:orientation="vertical"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.HomeScreen">
 
@@ -20,11 +19,17 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/icon_bestellen"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:textColor="@android:color/white"
+            android:text="Bestellen"
+            android:gravity="center_horizontal|center_vertical"
+            android:textSize="20dp"
+            android:layout_weight="4"
             />
     </LinearLayout>
     <LinearLayout
@@ -34,6 +39,21 @@
         android:orientation="vertical"
         android:layout_weight="1"
         >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/icon_gebruiker"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:text="Mijn account"
+            android:gravity="center_horizontal|center_vertical"
+            android:textSize="20dp"
+            android:layout_weight="4"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +62,21 @@
         android:orientation="vertical"
         android:layout_weight="1"
         >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/icon_saldo"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:text="Saldo"
+            android:gravity="center_horizontal|center_vertical"
+            android:textSize="20dp"
+            android:layout_weight="4"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,5 +85,20 @@
         android:orientation="vertical"
         android:layout_weight="1"
         >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/icon_informatie"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:text="Informatie"
+            android:gravity="center_horizontal|center_vertical"
+            android:textSize="20dp"
+            android:layout_weight="4"
+            />
     </LinearLayout>
 </LinearLayout>
