--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -62,12 +62,14 @@
         android:orientation="vertical"
         android:layout_weight="1"
         >
+
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_saldo"
-            />
+            android:src="@drawable/icon_saldo" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
