--- a/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
@@ -1,9 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.periode4groep2.customerapp.PresentationLayer.add_saldo">
+    android:background=""
+    tools:context="com.periode4groep2.customerapp.MainActivity"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="#FF9600"
+        android:elevation="4dp"
+        android:theme="@style/BestelAppv2"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_marginTop="220dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:text="Huidig saldo €0,00"
+            android:textColor="@color/colorOrange"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:text="Saldo toevoegen"
+            android:textColor="@color/colorOrange"
+            android:textSize="18dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="150dp"
+            android:paddingRight="5dp"
+
+            android:hint="€0,00"
+            android:textSize="40dp" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Inloggen"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorOrange"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
+
+
