--- a/CustomerApp/app/src/main/res/layout/activity_test.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_test.xml
@@ -6,24 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.periode4groep2.customerapp.TestActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="#FF9600"
-        android:elevation="4dp"
-        android:theme="@style/BestelAppv2"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:layout_margin="7dp"
-        android:text="€ 2,50"
-        android:backgroundTint="#001734"
-        android:layout_gravity="right"/>
-
-    </android.support.v7.widget.Toolbar>
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/tool_bar"
+        ></include>
 
 </LinearLayout>
