--- a/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
@@ -25,7 +25,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/huidigSaldoTextId"
             android:layout_width="match_parent"
             android:layout_marginTop="220dp"
             android:layout_height="30dp"
@@ -35,7 +35,7 @@
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/saldoId"
             android:layout_width="match_parent"
 
             android:layout_height="30dp"
