inlogscherm zonder saldoknop

--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar"
+        android:id="@+id/tool_bar_no_button"
+        layout="@layout/tool_bar_no_button"
         ></include>
 
     <LinearLayout
