--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="com.periode4groep2.customerapp.MainActivity"
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.MainActivity"
     android:orientation="vertical">
 
     <include
