--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -8,35 +8,37 @@
     android:orientation="vertical"
     android:background="@color/colorOrange"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.HomeScreen">
+
     <include
         android:id="@+id/tool_bar"
-        layout="@layout/tool_bar"
-        ></include>
+        layout="@layout/tool_bar">
+    </include>
+
     <LinearLayout
+        android:id="@+id/OrderID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:orientation="vertical"
         android:layout_weight="1"
         android:background="@color/colorBackground"
+        android:clickable="true"
+        android:orientation="vertical">
 
-        >
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_bestellen"
-            />
+            android:src="@drawable/icon_bestellen" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@android:color/white"
-            android:text="Bestellen"
-            android:gravity="center_horizontal|center_vertical"
-            android:textSize="20dp"
             android:layout_weight="2"
-            />
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Bestellen"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,6 +46,7 @@
         android:orientation="vertical"
         android:layout_weight="1"
         android:paddingTop="7dp"
+        android:id="@+id/AccountID"
         >
         <ImageView
             android:layout_width="match_parent"
@@ -70,6 +73,7 @@
         android:orientation="vertical"
         android:layout_weight="1"
         android:paddingTop="7dp"
+        android:id="@+id/BalanceID"
         >
 
         <ImageView
@@ -100,6 +104,7 @@
         android:layout_weight="1"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
+        android:id="@+id/MyOrdersID"
         >
         <ImageView
             android:layout_width="match_parent"
