--- a/CustomerApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,8 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:hint="**********"/>
+            android:hint="**********"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <RelativeLayout
