--- a/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
@@ -54,11 +54,12 @@
 
 
         <EditText
+            android:id="@+id/addsaldoId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="150dp"
             android:paddingRight="5dp"
-
+            android:inputType="number"
             android:hint="€0,00"
             android:textSize="40dp" />
         <Button
