--- a/CustomerApp/app/src/main/res/layout/activity_wallet.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_wallet.xml
@@ -25,7 +25,8 @@
         android:id="@+id/walletBottomDivLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="bottom">
 
         <LinearLayout
             android:id="@+id/walletButtonContainLayout"
@@ -35,13 +36,16 @@
 
             <Button
                 android:id="@+id/addSaldoBtn"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
+                android:layout_width="180dp"
+                android:layout_height="90dp"
+                android:layout_marginRight="10dp"
+                android:background="#ff9600"/>
 
             <Button
                 android:id="@+id/refundSaldoBtn"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
+                android:layout_width="180dp"
+                android:layout_height="90dp"
+                android:background="#ff9600"/>
 
 
         </LinearLayout>
