--- a/CustomerApp/app/src/main/res/layout/activity_wallet.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_wallet.xml
@@ -6,10 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#001734"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="10dp"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.WalletActivity">
 
 
@@ -26,25 +23,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom">
+        >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="45"
+            >
+
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/walletButtonContainLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/addSaldoBtn"
-                android:layout_width="180dp"
-                android:layout_height="90dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:background="#ff9600"/>
 
             <Button
                 android:id="@+id/refundSaldoBtn"
-                android:layout_width="180dp"
-                android:layout_height="90dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="#ff9600"/>
 
 
@@ -53,3 +61,12 @@
     </LinearLayout>
 
 </LinearLayout>
+
+<!-- Aanpassen voor morgen:
+    De kleuren heb je nu nog in hex codes, die moeten naar een
+    android:@color/ en dan de kleur die wij in de values map hebben
+    zitten. Verder zou ik proberen te vermijden dat je met x aantal dp
+    werkt maar meer met match parent en wrap content omdat dat op iedere
+    telefoon hetzelfde is zegmaar als hoe jij het zien. En voor de rest kun
+    je er andere dingen aan toevoegen die vorr zich spreken
+ -->
