--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -21,13 +21,12 @@
         android:background="@color/colorBackground"
         android:clickable="true"
         android:orientation="vertical">
-
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_bestellen" />
-
+            android:src="@drawable/icon_bestellen"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,9 +34,9 @@
             android:gravity="center_horizontal|center_vertical"
             android:text="Bestellen"
             android:textColor="@android:color/white"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -74,7 +73,6 @@
         android:paddingTop="7dp"
         android:id="@+id/BalanceID"
         >
-
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -83,7 +81,6 @@
             android:src="@drawable/icon_saldo"
             android:background="@color/colorBackground"
             />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
