Tim zijn user story proberen te fixen
Pittig veel dingen aangepast

--- a/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_saldo.xml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
+    <!--
     <include
         android:id="@+id/tool_bar_no_button"
         layout="@layout/tool_bar_no_button">
+    </include>
+    -->
 
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/tool_bar">
     </include>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:gravity="bottom"
+        >
         <TextView
             android:id="@+id/huidigSaldoTextId"
             android:layout_width="match_parent"
-            android:layout_marginTop="220dp"
+            android:layout_gravity="bottom"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="Huidig saldo €0,00"
+            android:text="Huidig saldo: "
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
-
+            <TextView
+                android:id="@+id/huidigSaldoTextMoney"
+                android:layout_width="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="€0,00 "
+                android:textColor="@color/colorOrange"
+                android:textSize="18dp" />
         <TextView
             android:id="@+id/saldoId"
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
-
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="Saldo toevoegen"
+            android:text="Saldo toevoegen:"
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
     </LinearLayout>
