--- a/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
@@ -54,23 +54,21 @@
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
-
-
+        android:orientation="vertical"
+        >
         <EditText
             android:id="@+id/addsaldoId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="€0,00"
             android:inputType="number"
-            android:paddingLeft="150dp"
-            android:paddingRight="5dp"
-            android:textSize="40dp" />
+            android:gravity="center"
+            android:textSize="40dp"
+            />
 
         <Button
             android:id="@+id/stortButton"
@@ -84,10 +82,7 @@
             android:text="Storten"
             android:textAllCaps="false"
             android:textSize="18dp" />
-
     </LinearLayout>
-
-
 </LinearLayout>
 
 
