--- a/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Bestellen"
+            android:text="@string/order_button"
             android:textColor="@android:color/white"
             android:textSize="20dp"
             />
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:text="Mijn account"
+            android:text="@string/my_account_button"
             android:gravity="center_horizontal|center_vertical"
             android:textSize="20dp"
             android:layout_weight="2"
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:text="Saldo"
+            android:text="@string/balance_button"
             android:gravity="center_horizontal|center_vertical"
             android:textSize="20dp"
             android:layout_weight="2"
@@ -113,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:text="Mijn bestellingen"
+            android:text="@string/my_orders_button"
             android:gravity="center_horizontal|center_vertical"
             android:textSize="20dp"
             android:layout_weight="2"
