--- a/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
@@ -7,17 +7,9 @@
     tools:context="com.periode4groep2.customerapp.PresentationLayer.AddBalanceActivity"
     android:orientation="vertical"
     >
-
-    <!--
     <include
         android:id="@+id/tool_bar_no_button"
         layout="@layout/tool_bar_no_button">
-    </include>
-    -->
-
-    <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar">
     </include>
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="Huidig saldo: "
+            android:text="@string/current_balance_textview"
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
             <TextView
@@ -39,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:gravity="center"
-                android:text="0 "
+                android:text="@string/current_balance_view"
                 android:textColor="@color/colorOrange"
                 android:textSize="18dp" />
         <TextView
@@ -47,26 +39,23 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="Saldo toevoegen:"
+            android:text="@string/add_balance"
             android:textColor="@color/colorOrange"
             android:textSize="18dp" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
-
         <EditText
             android:id="@+id/giveBalanceID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="€0,00"
+            android:hint="@string/desired_balance"
             android:inputType="number"
             android:textSize="40dp" />
-
         <Button
             android:id="@+id/addBalanceID"
             android:layout_width="match_parent"
@@ -75,7 +64,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="@color/colorOrange"
-            android:text="Storten"
+            android:text="@string/add_balance_button"
             android:textSize="18dp" />
     </LinearLayout>
 </LinearLayout>
