--- a/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.periode4groep2.customerapp.PresentationLayer.orderDetailActivity">
+    android:orientation="vertical"
+    tools:context="com.periode4groep2.customerapp.PresentationLayer.OrderDetailActivity">
 
     <include
         android:id="@+id/tool_bar"
@@ -19,10 +20,38 @@
     </ListView>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="45"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+
+        <TextView
+            android:id="@+id/totalTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/total_tag_textview"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/totalPriceTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/TEST_total_price_textview"
+            android:layout_weight="1"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/bottomSectionDiv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
 
         <LinearLayout
             android:id="@+id/buttonContainer"
@@ -34,16 +63,20 @@
             <Button
                 android:id="@+id/cancelOrderButton"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="@string/cancel_order_button"/>
 
             <Button
                 android:id="@+id/scanOrderButton"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="@string/scan_order_button"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
