--- a/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order_detail.xml
@@ -15,33 +15,32 @@
     <ListView
         android:id="@+id/orderItemListView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        >
-    </ListView>
+        android:layout_height="match_parent"
+        android:layout_weight="1"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="45"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_weight="2"
+        android:gravity="center"
+        android:orientation="horizontal">
 
 
         <TextView
             android:id="@+id/totalTagTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/total_tag_textview"
+            android:layout_weight="1"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:text="@string/total_tag_textview" />
 
         <TextView
             android:id="@+id/totalPriceTagTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/TEST_total_price_textview"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="@string/TEST_total_price_textview" />
 
     </LinearLayout>
 
