--- a/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_add_balance.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.AddBalanceActivity"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     >
     <include
         android:id="@+id/tool_bar_no_button"
