--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -4,10 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.periode4groep2.customerapp.PresentationLayer.OrderActivity">
 
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar">
     </include>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorOrange"
+        android:layout_weight="4">
+    </LinearLayout>
+
 </LinearLayout>
