--- a/CustomerApp/app/src/main/res/layout/tool_bar.xml
+++ b/CustomerApp/app/src/main/res/layout/tool_bar.xml
@@ -18,5 +18,6 @@
         android:layout_margin="7dp"
         android:text="€ 2,50"
         android:backgroundTint="#001734"
+        android:textColor="#e7e7e7"
         android:layout_gravity="right" />
 </android.support.v7.widget.Toolbar>
