--- a/CustomerApp/app/src/main/res/layout/activity_order.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_order.xml
@@ -41,6 +41,7 @@
             android:layout_weight="2"
             android:text="Totaal:"
             android:textSize="25dp"
+            android:paddingLeft="3dp"
             android:gravity="center_vertical"/>
             <TextView
                 android:layout_width="match_parent"
